- fixed text align bug

--- a/src/styles/game.module.scss
+++ b/src/styles/game.module.scss
@@ -41,7 +41,6 @@
       min-width: 60.5px;
       color: var(--white);
       font-weight: bold;
-      text-align: left;
 
       &:hover {
         box-shadow: 0 0 2px var(--grey);
